[gd_scene load_steps=2 format=3 uid="uid://dhjjnxu1vggjk"]

[ext_resource type="Script" uid="uid://hgcene2574c1" path="res://ui/menu/load_game.gd" id="1_yn1ts"]

[node name="LoadGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_yn1ts")
save_menu = true

[node name="SavesContainer" type="ItemList" parent="."]
layout_mode = 0
anchor_left = 0.0277778
anchor_top = 0.0277778
anchor_right = 0.687778
anchor_bottom = 0.972222
metadata/_edit_use_anchors_ = true

[node name="SaveDetails" type="RichTextLabel" parent="."]
layout_mode = 0
anchor_left = 0.715556
anchor_top = 0.0277778
anchor_right = 0.972222
anchor_bottom = 0.527778
bbcode_enabled = true
metadata/_edit_use_anchors_ = true

[node name="NewSave" type="Button" parent="SaveDetails"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.942593
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 23.0
grow_horizontal = 2
grow_vertical = 0
text = "Nowy Zapis"
metadata/_edit_use_anchors_ = true

[node name="DelSave" type="Button" parent="SaveDetails"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(41.5294, 0.0666667, 0, 1)
theme_override_colors/font_focus_color = Color(41.5294, 0.0666667, 0, 1)
disabled = true
text = "Usu≈Ñ zapis"

[node name="Button" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.715556
anchor_top = 0.890741
anchor_right = 0.972222
anchor_bottom = 0.972222
disabled = true
metadata/_edit_use_anchors_ = true

[node name="NewSavePopup" type="PopupPanel" parent="."]
title = "Nowy zapis"
initial_position = 2
size = Vector2i(360, 100)

[node name="Panel" type="Panel" parent="NewSavePopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 356.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewSaveName" type="LineEdit" parent="NewSavePopup/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
placeholder_text = "Nowy Zapis"

[node name="NewSaveButton" type="Button" parent="NewSavePopup/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "Zapisz"

[node name="Cancel" type="Button" parent="NewSavePopup/Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 56.0
grow_vertical = 0
text = "Anuluj"

[connection signal="item_selected" from="SavesContainer" to="." method="_on_saves_container_item_selected"]
[connection signal="pressed" from="SaveDetails/NewSave" to="." method="_on_new_save_pressed"]
[connection signal="pressed" from="SaveDetails/DelSave" to="." method="_on_del_save_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="popup_hide" from="NewSavePopup" to="." method="_on_new_save_popup_popup_hide"]
[connection signal="pressed" from="NewSavePopup/Panel/NewSaveButton" to="." method="_on_new_save_button_pressed"]
